--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: SassBites
 description: > # this means to ignore newlines until "baseurl:"
-  A live, on air podcast covering small bites of Sass every week at 12pm Pacific. Events are posted each week, and video/chat is available on the event homepage. 
+  A live, on air podcast covering small bites of Sass every week at 12pm Pacific. Events are posted each week, and video/chat is available on the event homepage.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://jshawl.github.io" # the base hostname & protocol for your site
+url: "http://sassbites.github.io" # the base hostname & protocol for your site
 twitter_username: sassbites
 
 # Build settings
